<resources>
    <string name="user_app_name">module-sign</string>
    <string name="user_label_please_input_username">请输入用户名</string>
    <string name="user_label_please_input_password">请输入密码</string>
    <string name="user_label_please_re_input_password">请重复输入密码</string>
    <string name="user_label_remember_password">是否记住密码?</string>
    <string name="user_label_login">登陆</string>
    <string name="user_label_register">注册</string>
    <string name="user_label_goto_register">还没有账号?</string>
    <string name="user_label_goto_login">已有账号去登陆</string>
    <string name="user_tip_username_can_not_be_empty">用户名不能为空</string>
    <string name="user_tip_username_must_over_three">用户名至少3位</string>
    <string name="user_tip_password_can_not_be_empty">密码不能为空</string>
    <string name="user_tip_password_must_over_six">密码至少6位</string>
    <string name="user_tip_please_re_input_password">请重复输入密码</string>
    <string name="user_tip_password_must_be_same">两次密码输入不一致</string>
</resources>