<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/register_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_username_input_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/user_label_please_input_username"
        app:boxStrokeColor="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:helperTextTextColor="@color/textSecond"
        app:hintTextColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@+id/register_guideline"
        app:startIconDrawable="@drawable/user_username"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecond" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_input_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/user_label_please_input_password"
        app:boxStrokeColor="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@+id/register_username_input_lay"
        app:startIconDrawable="@drawable/user_password"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecond" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_repassword_input_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:hint="@string/user_label_please_re_input_password"
        app:boxStrokeColor="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:hintTextColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@+id/register_password_input_lay"
        app:startIconDrawable="@drawable/user_password"
        app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_repassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecond" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/sel_shape_btn"
        android:text="@string/user_label_register"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_repassword_input_lay" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_goto_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/sel_shape_btn"
        android:text="@string/user_label_goto_login"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/register_btn"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>